test/error/array-assign-type-mismatch.dsk
let mut arr = [1, 2, 3]
arr[0] = "hello"
